# unwind-mc

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  setup_env.sh  unwind-mc.cabal
gui/: .editorconfig  forge.config.js  index.html  package-lock.json  package.json  start.sh  tsconfig.json  tslint.json
gui/src/: index.jade  main.ts  render.ts  unwindmc.ts
lib/: Cargo.toml
lib/src/: analyzer.rs  api.rs  asm.rs  asm_analyzer.rs  assignment_tracker.rs  ast.rs  ast_builder.rs  common.rs  cpp_emitter.rs  decompiler.rs  disassembler.rs  flow_analyzer.rs  function.rs  il.rs  il_decompiler.rs  instruction_graph.rs  lib.rs  project.rs  text_writer.rs  transformer.rs  type_resolver.rs  udis86.rs
lib/tests/: disassembly.rs  int_arithmetic_tests.rs  stages_find_max.rs  stages_functions_array.rs
lib/tests/analysis_helper/: mod.rs
lib/tests/source_tester/: mod.rs
src/: Main.hs  UnwindMC.sln  analyzer.rs  asm.rs  assignment_tracker.rs  ast.rs  ast_builder.rs  common.rs  cpp_emitter.rs  decompiler.rs  flow_analyzer.rs  il.rs  il_decompiler.rs  lib.rs  text_writer.rs  transformer_fixup_pointer_arithmetics.rs  transformer_fixup_zero_assignment.rs  type_resolver.rs  udis86.rs
src/Unwind/: Analysis.hs  Asm.hs  PE.hs  Types.hs
src/UnwindMC.Benchmarks/: PatternMatchingBenchmark.cs  PatternMatchingBenchmark2.cs  Program.cs  UnwindMC.Benchmarks.csproj
src/UnwindMC.Library/: UnwindMC.Library.csproj  packages.config
tests/: int_arithmetic_tests.rs  stages_find_max.rs  stages_functions_array.rs
unwind-mc/: .gitignore  Cargo.toml
(+207 files in other folders)
