[package]
name = "unwind-mc"
version = "0.1.0"
authors = ["Dmitry Polyanitsa <coffeecup.winner@gmail.com>"]

[lib]
name = "unwindmc"
crate-type = ["dylib", "rlib"]

[dependencies]
bincode = "1.0.1"
either = "1.5.0"
goblin = "0.0.19"
libudis86-sys = "0.2.0"
regex = "1.1.0"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.37"
