[package]
name = "unwind-mc"
version = "0.1.0"
authors = ["Dmitry Polyanitsa <coffeecup.winner@gmail.com>"]

[lib]
name = "unwindmc"
crate-type = ["dylib", "rlib"]

[dependencies]
bincode = "1.1.1"
bitflags = "1.0.4"
either = "1.5.1"
goblin = "0.0.19"
libudis86-sys = "0.2.0"
log = { version = "0.4.6", features = ["std"] }
regex = "1.1.0"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
time = "0.1.42"
